k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orabank-sms-banking
  labels:
    app: orabank-sms-banking
    team: backend
